index.html new commit

--- a/problem1/index.html
+++ b/problem1/index.html
@@ -31,6 +31,6 @@
 		<li>No one can make you feel inferior without your consent. - Eleanor Roosevelt, This is My Story</li>
 		<li>ไม่มีใครสามารถทำให้คุณรู้สึกไร้ค่าได้โดยปราศจากการยินยอมโดยตัวคุณเอง - Eleanor Roosevelt, This is My Story</li>
 	</ul>
-	<a href="second.html">My Second Page</a>
+	<a href="mysecondpage.html">My Second Page</a>
 </body>
 </html>
