--- a/timetable2.html
+++ b/timetable2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>KKU Presidential Candidates 2018</title>
+	<title>School timetable</title>
 	<style>
 		html {
 			font-family: sans-serif;
@@ -26,7 +26,7 @@
 	</style>
 </head>
 <body>
-	<h1>KKU Presidential Candidates 2018</h1>
+	<h1>School timetable</h1>
 	<table>
 		<table>
       <colgroup>
