--- a/testBootstrap2.html
+++ b/testBootstrap2.html
@@ -9,6 +9,9 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 	<style>
 		.col {
+			height: 100%;
+		}
+		.nav-pills {
 			background-color: black;
 			height: 100%;
 		}
