--- a/testBootstrap2.html
+++ b/testBootstrap2.html
@@ -22,22 +22,19 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-				<ul class="nav nav-pills nav-stacked">
-				  <li class="nav-item">
-				    <a class="nav-link active" href="#">CS Tool</a>
-				  </li>
-				  <li class="nav-item">
-				    <a class="nav-link" href="#">Admin Tool</a>
-				  </li>
-				  <li class="nav-item">
-				    <a class="nav-link" href="#">Report Tool</a>
-				  </li>
-				  <li class="nav-item">
-				    <a class="nav-link" href="#">Collection Tool</a>
-				  </li>
-				  <li class="nav-item">
-				    <a class="nav-link" href="#">User Management</a>
-				  </li>
+				<ul class="nav flex-column">
+					<li class="nav-item">
+						<a class="nav-link active" href="#">Active</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Link</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Link</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link disabled" href="#">Disabled</a>
+					</li>
 				</ul>
 			</div>
 			<div class="col-10">
