--- a/testBootstrap2.html
+++ b/testBootstrap2.html
@@ -11,9 +11,8 @@
 		.col {
 			height: 100%;
 		}
-		.nav.flex-column {
+		.nav-pills {
 			background-color: black;
-			height: 100%;
 		}
 	</style>
 </head>
@@ -22,7 +21,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-				<ul class="nav flex-column">
+				<ul class="nav nav-pills flex-column">
 					<li class="nav-item">
 						<a class="nav-link active" href="#">Active</a>
 					</li>
