--- a/testBootstrap2.html
+++ b/testBootstrap2.html
@@ -14,6 +14,9 @@
 		.nav-pills {
 			background-color: black;
 		}
+		.nav-item > .active > li, .nav-pills > .active > li:hover {
+			background-color: red;
+		}
 	</style>
 </head>
 <body>
