--- a/testBootstrap2.html
+++ b/testBootstrap2.html
@@ -13,6 +13,7 @@
 		}
 		.nav-pills {
 			background-color: black;
+			height: 100%;
 		}
 		.nav-item > .active > li, .nav-pills > .active > li:hover {
 			background-color: red;
