--- a/testBootstrap2.html
+++ b/testBootstrap2.html
@@ -26,7 +26,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-				<ul class="nav nav-pills nav-pills nav-stacked">
+				<ul class="nav nav-pills flex-column">
 					<li class="nav-item">
 						<a class="nav-link active" href="#">Active</a>
 					</li>
