--- a/testBootstrap2.html
+++ b/testBootstrap2.html
@@ -25,7 +25,7 @@
 
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col">
+			<div class="col-md-2">
 				<ul class="nav nav-pills flex-column">
 					<li class="nav-item">
 						<a class="nav-link active" href="#">Active</a>
@@ -41,7 +41,7 @@
 					</li>
 				</ul>
 			</div>
-			<div class="col-10">
+			<div class="col-md-10">
 				<ul class="nav nav-tabs">
 				  <li class="nav-item">
 				    <a class="nav-link active" href="#">Active</a>
