--- a/testBootstrap2.html
+++ b/testBootstrap2.html
@@ -25,7 +25,7 @@
 
 	<div class="container-fluid">
 			<div class="col-md-2">
-				<ul class="nav nav-pills flex-column h-100 d-inline-block">
+				<ul class="nav nav-pills flex-column h-100 d-block">
 					<li class="nav-item">
 						<a class="nav-link active" href="#">Active</a>
 					</li>
