--- a/testBootstrap2.html
+++ b/testBootstrap2.html
@@ -24,6 +24,7 @@
 <body>
 
 	<div class="container-fluid">
+		<div class="row">
 			<div class="col-md-2">
 				<ul class="nav nav-pills flex-column h-100">
 					<li class="nav-item">
@@ -56,6 +57,7 @@
 				  </li>
 				</ul>
 			</div>
+		</div>
 	</div>
 
 <!-- Optional JavaScript -->
