--- a/testBootstrap2.html
+++ b/testBootstrap2.html
@@ -8,6 +8,9 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 	<style>
+		.container {
+			height: 100%;
+		}
 		.container-fluid {
 			height: 100%;
 		}
@@ -22,7 +25,7 @@
 	</style>
 </head>
 <body>
-
+<div class="container">
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-2">
@@ -59,7 +62,7 @@
 			</div>
 		</div>
 	</div>
-
+</div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
