--- a/testBootstrap2.html
+++ b/testBootstrap2.html
@@ -8,16 +8,15 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 	<style>
-		.container {
-			min-height: 100%;
-			width: 100%;
-		}
 		.container-fluid {
 			height: 100%;
 		}
 		.col-md-2 {
-			height: 100%;
+			height: 100vh;
 			background-color: black;
+		}
+		.col-md-10 {
+			height: 100vh;
 		}
 		.nav-pills {
 			background-color: black;
@@ -26,11 +25,10 @@
 	</style>
 </head>
 <body>
-<div class="container">
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-2">
-				<ul class="nav nav-pills flex-column h-100">
+				<ul class="nav nav-pills flex-column">
 					<li class="nav-item">
 						<a class="nav-link active" href="#">Active</a>
 					</li>
@@ -63,7 +61,8 @@
 			</div>
 		</div>
 	</div>
-</div>
+
+
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
