--- a/testBootstrap2.html
+++ b/testBootstrap2.html
@@ -14,14 +14,21 @@
 		.col-md-2 {
 			height: 100vh;
 			background-color: black;
+			background-image: url("jaidee login.png");
 		}
 		.col-md-10 {
 			height: 100vh;
 		}
 		.nav-pills {
 			background-color: black;
-			height: 100%;
+			opacity: 0.9;
+			height: 100vh;
+			/*margin-top: 20px;*/
+			padding: 10px;
 		}
+/*		.nav-item {
+			margin-top: 20px;
+		}*/
 	</style>
 </head>
 <body>
@@ -29,6 +36,9 @@
 		<div class="row">
 			<div class="col-md-2">
 				<ul class="nav nav-pills flex-column">
+					<!-- <div style="color: white; text-align: center;">
+						<h4>Test</h4>
+					</div> -->
 					<li class="nav-item">
 						<a class="nav-link active" href="#">Active</a>
 					</li>
