--- a/testBootstrap2.html
+++ b/testBootstrap2.html
@@ -14,7 +14,7 @@
 		.col-md-2 {
 			height: 100vh;
 			background-color: black;
-			background-image: url("jaidee login.png");
+			background-image: url("images/jaidee login.png");
 		}
 		.col-md-10 {
 			height: 100vh;
