--- a/testBootstrap2.html
+++ b/testBootstrap2.html
@@ -7,17 +7,26 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Kanit|Lato|Mitr|Open+Sans|Prompt|Sarabun" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+	<!-- development version, includes helpful console warnings -->
+	
+
 	<style>
+		* {
+			font-family: 'Kanit', sans-serif;
+		}
 		.container-fluid {
 			height: 100%;
 		}
-		.col-md-2 {
+		.col-2 {
 			height: 100vh;
 			background-color: black;
-			background-image: url("images/jaidee login.png");
-		}
-		.col-md-10 {
-			height: 100vh;
+			/*background-image: url("jaidee login.png");*/
+			/*background-size: auto 100%;*/
+			background-image: url("IMG_5226.jpg");
+			background-size: 100% 100%; /*cover*/
+			background-repeat: no-repeat;
 		}
 		.nav-pills {
 			background-color: black;
@@ -26,48 +35,133 @@
 			/*margin-top: 20px;*/
 			padding: 10px;
 		}
-/*		.nav-item {
+		.nav-link {
+			margin-top: 10px;
+		}
+		.nav-pills > a.active {
+			background-color: #0066FF!important;
+			color: white;
+		}
+		.nav-pills > a:hover {
+		    background-color: #0066FF;
+		    color: white;
+		}
+		.nav-pills > a {
+			color: white;
+		}
+		.card {
 			margin-top: 20px;
-		}*/
+		}
 	</style>
 </head>
 <body>
-	<div class="container-fluid">
+	<div class="container-fluid" id="app">
 		<div class="row">
-			<div class="col-md-2">
-				<ul class="nav nav-pills flex-column">
-					<!-- <div style="color: white; text-align: center;">
-						<h4>Test</h4>
-					</div> -->
-					<li class="nav-item">
-						<a class="nav-link active" href="#">Active</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Link</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Link</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link disabled" href="#">Disabled</a>
-					</li>
-				</ul>
+			<div class="col-2">
+				<!-- left side menu -->
+			    <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+			    	<a class="nav-link dropdown dropdown-toggle bg-light" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown
+			    		<div class="dropdown-menu">
+			    			<a class="dropdown-item" href="#">Button1</a>
+			    			<a class="dropdown-item" href="#">Button2</a>
+			    			<a class="dropdown-item" href="#">Button3</a>
+			    		</div>
+			    	</a>
+			    	<a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">Home</a>
+			    	<a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Profile</a>
+			    	<a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</a>
+			    	<a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>
+			    </div>
 			</div>
-			<div class="col-md-10">
-				<ul class="nav nav-tabs">
-				  <li class="nav-item">
-				    <a class="nav-link active" href="#">Active</a>
-				  </li>
-				  <li class="nav-item">
-				    <a class="nav-link" href="#">Link</a>
-				  </li>
-				  <li class="nav-item">
-				    <a class="nav-link" href="#">Link</a>
-				  </li>
-				  <li class="nav-item">
-				    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-				  </li>
-				</ul>
+			<div class="col-10">
+			    <div class="tab-content" id="v-pills-tabContent">
+			    	<div class="card" id="searchBar"> <!-- add 'container' to center and decrease width -->
+			    		<!-- <nav class="navbar navbar-light bg-light">
+							<form class="form-inline">
+								<div class="form-group mb-2">
+				    				<div class="dropdown dropdown-toggle" data-toggle="dropdown" role="button">
+				    					Search by:
+				    					<div class="dropdown-menu">
+				    						<a class="dropdown-item">เบอร์โทรศัพท์</a>
+				    						<a class="dropdown-item">เลขบัตรประชาชน</a>
+				    						<a class="dropdown-item">Member ID</a>
+				    					</div>
+				    				</div>
+				    			</div>
+							    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+							    <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
+							</form>
+						</nav> -->
+				    	<nav class="navbar navbar-expand-lg navbar-light bg-lisht">
+				    		<form class="form-inline">
+				    			<div class="form-group mb-2">
+				    				<div class="dropdown dropdown-toggle" data-toggle="dropdown" role="button">
+				    					Search by:
+				    					<div class="dropdown-menu">
+				    						<a class="dropdown-item">เบอร์โทรศัพท์</a>
+				    						<a class="dropdown-item">เลขบัตรประชาชน</a>
+				    						<a class="dropdown-item">Member ID</a>
+				    					</div>
+				    				</div>
+				    			</div>
+								<div class="form-group mx-sm-3 mb-2">
+									<input type="text" class="form-control" id="inputField" placeholder="Search...">
+								</div>
+								<button type="submit" class="btn btn-success mb-2">Search</button>
+
+								<!-- input field with search icon -->
+								<!-- <div class="input-group">
+									<input class="form-control py-2 border-right-0 border" placeholder="Search...">
+									<span class="input-group-append">
+										<div class="input-group-text bg-transparent"><i class="fa fa-search"></i></div>
+									</span>
+								</div> -->
+							</form>
+						</nav>
+				    </div>
+			    	<div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
+			    		<div class="card">
+				    		<div class="container-fluid">
+				    			<!-- <h2>Home</h2>
+				    			<p>ข้อมูลผู้ใช้งาน</p> -->
+				    			<ul class="nav nav-tabs">
+									<li class="nav-item">
+									    <a class="nav-link active" href="#">Active</a>
+									</li>
+									<li class="nav-item">
+									    <a class="nav-link" href="#">Link</a>
+									</li>
+									<li class="nav-item">
+									    <a class="nav-link" href="#">Link</a>
+									</li>
+									<li class="nav-item">
+									    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+									</li>
+								</ul>
+
+								<!-- Tab content -->
+								<div class="tab-pane active" id="active-tab" role="tabpanel" aria-labeledby="active-tab">
+									<div class="card-body">
+										<h2 class="card-title">User profile and status</h2>
+										<div class="card-text">
+											<table class="table table-borderless">
+												<tbody>
+													<tr>
+														<th>ชื่อ</th>
+														<td> {{ fname }} </td>
+													</tr>
+												</tbody>
+											</table>
+										</div>
+									</div>
+								</div>
+				    		</div>
+				    	</div>
+			    	</div>
+			    	<div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">Under construction</div>
+			    	<div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">Message</div>
+			    	<div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">Settings</div>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -80,7 +174,16 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
 <script>
-	
+	var app = new Vue({
+		el: '#app',
+		data: {
+		    fname: 'Areeya',
+		    lname: 'Vansin',
+		    phone: '0123456789',
+		    ssn: '0123456789123',
+		    member: '01234567'
+		}
+	})
 </script>
 </body>
 </html>
