--- a/testBootstrap2.html
+++ b/testBootstrap2.html
@@ -10,7 +10,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Kanit|Lato|Mitr|Open+Sans|Prompt|Sarabun" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<!-- development version, includes helpful console warnings -->
-	
+	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
 	<style>
 		* {
