--- a/testBootstrap2.html
+++ b/testBootstrap2.html
@@ -25,7 +25,7 @@
 			background-color: black;
 			/*background-image: url("jaidee login.png");*/
 			/*background-size: auto 100%;*/
-			background-image: url("IMG_5226.jpg");
+			background-image: url("images/IMG_5226.jpg");
 			background-size: 100% 100%; /*cover*/
 			background-repeat: no-repeat;
 		}
