--- a/mobile-detect.html
+++ b/mobile-detect.html
@@ -35,6 +35,8 @@
             alert('AndroidOS');
         } else if(os.match(/iOS/i)) {
             alert('iOS');
+        } else {
+            alert('Not mobile.');
         }
 
         $('#detect-button').click(function() {
