--- a/mobile-detect.html
+++ b/mobile-detect.html
@@ -31,16 +31,12 @@
         userAgent = md.userAgent();
         os = md.os();
         
-        if(navigator.userAgent.match(/Android/i)) {
-            alert('Android');
-        }
-        
         if(os.match(/AndroidOS/i)) {
             alert('AndroidOS');
         } else if(os.match(/iOS/i)) {
             alert('iOS');
-        } else {
-            alert('Not mobile.');
+        } else if(os == null) {
+            alert('Not found OS');
         }
 
         $('#detect-button').click(function() {
