--- a/mobile-detect.html
+++ b/mobile-detect.html
@@ -16,16 +16,16 @@
     <script>
     
         var md = new MobileDetect(window.navigator.userAgent);
-        console.log( md.mobile() );          // 'Sony'
-        console.log( md.phone() );           // 'Sony'
-        console.log( md.tablet() );          // null
-        console.log( md.userAgent() );       // 'Safari'
-        console.log( md.os() );              // 'AndroidOS'
-        console.log( md.is('iPhone') );      // false
-        console.log( md.is('bot') );         // false
-        console.log( md.version('Webkit') );         // 534.3
-        console.log( md.versionStr('Build') );       // '4.1.A.0.562'
-        console.log( md.match('playstation|xbox') ); // false
+        //console.log( md.mobile() );          // 'Sony'
+        //console.log( md.phone() );           // 'Sony'
+        //console.log( md.tablet() );          // null
+        //console.log( md.userAgent() );       // 'Safari'
+        //console.log( md.os() );              // 'AndroidOS'
+        //console.log( md.is('iPhone') );      // false
+        //console.log( md.is('bot') );         // false
+        //console.log( md.version('Webkit') );         // 534.3
+        //console.log( md.versionStr('Build') );       // '4.1.A.0.562'
+        //console.log( md.match('playstation|xbox') ); // false
         mobile = md.mobile();
         phone = md.phone();
         userAgent = md.userAgent();
@@ -36,6 +36,7 @@
         } else if(os.match(/iOS/i)) {
             alert('iOS');
         } else if(os == null) {
+            console.log(os)
             alert('Not found OS');
         }
 
