--- a/mobile-detect.html
+++ b/mobile-detect.html
@@ -34,7 +34,7 @@
         if(os != null) {
             if(os.match(/AndroidOS/i)) {
                 //alert('AndroidOS');
-                window.location = 'https://play.google.com/store/apps/details?id=com.google.android.apps.maps';
+                window.location = 'https://play.google.com/id=com.google.android.apps.maps';
             } else if(os.match(/iOS/i)) {
                 //alert('iOS');
                 window.location = 'https://apps.apple.com/th/app/google-maps/id585027354?l=th';
