--- a/mobile-detect.html
+++ b/mobile-detect.html
@@ -16,16 +16,6 @@
     <script>
     
         var md = new MobileDetect(window.navigator.userAgent);
-        //console.log( md.mobile() );          // 'Sony'
-        //console.log( md.phone() );           // 'Sony'
-        //console.log( md.tablet() );          // null
-        //console.log( md.userAgent() );       // 'Safari'
-        //console.log( md.os() );              // 'AndroidOS'
-        //console.log( md.is('iPhone') );      // false
-        //console.log( md.is('bot') );         // false
-        //console.log( md.version('Webkit') );         // 534.3
-        //console.log( md.versionStr('Build') );       // '4.1.A.0.562'
-        //console.log( md.match('playstation|xbox') ); // false
         mobile = md.mobile();
         phone = md.phone();
         userAgent = md.userAgent();
@@ -35,7 +25,8 @@
             if(os.match(/AndroidOS/i)) {
                 //alert('AndroidOS');
 //                 window.location = 'market://details?id=com.google.android.apps.maps';
-                window.location = 'https://play.google.com/store/apps/details?id=com.google.android.apps.maps';
+//                 window.location = 'https://play.google.com/store/apps/details?id=com.google.android.apps.maps';
+                window.open("maps://maps.google.com/maps");
             } else if(os.match(/iOS/i)) {
                 //alert('iOS');
                 window.location = 'https://apps.apple.com/th/app/google-maps/id585027354?l=th';
