--- a/mobile-detect.html
+++ b/mobile-detect.html
@@ -26,7 +26,7 @@
                 //alert('AndroidOS');
 //                 window.location = 'market://details?id=com.google.android.apps.maps';
 //                 window.location = 'https://play.google.com/store/apps/details?id=com.google.android.apps.maps';
-                window.open("maps://maps.google.com/maps");
+                window.open("play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=com.google.android.apps.maps");
             } else if(os.match(/iOS/i)) {
                 //alert('iOS');
                 window.location = 'https://apps.apple.com/th/app/google-maps/id585027354?l=th';
