--- a/mobile-detect.html
+++ b/mobile-detect.html
@@ -28,7 +28,8 @@
 //                 window.location = 'https://play.google.com/store/apps/details?id=com.google.android.apps.maps';
 //                 window.open("https://play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=com.google.android.apps.maps");
 //                 window.open("maps://maps.google.com/maps?daddr=<lat>,<long>&amp;ll=");
-                window.location.href = 'https://play.google.com/store/apps/details?id=com.google.android.apps.maps';
+//                 window.location.href = 'https://play.google.com/store/apps/details?id=com.google.android.apps.maps';
+                window.location.href = 'https://play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=com.google.android.apps.maps';
             } else if(os.match(/iOS/i)) {
                 //alert('iOS');
                 window.location.href = 'https://apps.apple.com/th/app/google-maps/id585027354?l=th';
