--- a/mobile-detect.html
+++ b/mobile-detect.html
@@ -39,7 +39,8 @@
                 window.location.href = 'https://apps.apple.com/th/app/google-maps/id585027354?l=th';
             }
         } else {
-            alert('Not found OS.');
+            window.location.href = 'https://play.app.goo.gl/?link=https://play.google.com/store/apps/details?id=deepsparks.loandd';
+//             alert('Not found OS.');
         }
         
 //         if(os.match(/AndroidOS/i)) {
